adding html pages

--- a/weather.rest/src/main/webapp/css/style.css
+++ b/weather.rest/src/main/webapp/css/style.css
@@ -4,7 +4,37 @@ body
 	font-size: 48px;
 }
 
+label
+{
+	font-size: 16px;
+}
+
 .alert-font
 {
     font-size: 16px;
+}
+
+.table
+{
+	font-size: 20px;
+}
+
+
+.row{
+    margin-top:40px;
+    padding: 0 10px;
+}
+
+.clickable{
+    cursor: pointer;   
+}
+
+.panel-heading  span {
+	margin-top: -20px;
+	font-size: 15px;
+}
+
+.well
+{
+	font-size: 20px;
 }
